intTests/test_saw_import/test1.log.good
Loading file "test1.saw"
Error: Cryptol: [error] at test1.saw:5:21--5:23
    Value not in scope: x1
Stack trace:
   (builtin) in (callback)
   (builtin) in fails
   test1.saw:5:1-5:29 (at top level)

(Failure was expected, continuing)
Error: Cryptol: [error] at test1.saw:8:21--8:28
    Value not in scope: A_2::x1
Stack trace:
   (builtin) in (callback)
   (builtin) in fails
   test1.saw:8:1-8:34 (at top level)

(Failure was expected, continuing)
(1, 2)
2
1
Error: Cryptol: [error] at test1.saw:18:21--18:23
    Value not in scope: x2
Stack trace:
   (builtin) in (callback)
   (builtin) in fails
   test1.saw:18:1-18:29 (at top level)

(Failure was expected, continuing)
1
Error: Cryptol: [error] at test1.saw:22:21--22:28
    Value not in scope: A_6::x2
Stack trace:
   (builtin) in (callback)
   (builtin) in fails
   test1.saw:22:1-22:34 (at top level)

(Failure was expected, continuing)
1
Error: Cryptol: [error] at test1.saw:26:21--26:28
    Value not in scope: A_7::x2
Stack trace:
   (builtin) in (callback)
   (builtin) in fails
   test1.saw:26:1-26:34 (at top level)

(Failure was expected, continuing)
done
